fix color overlapping issue between search bar and search icon on mobile devices

--- a/kagi.css
+++ b/kagi.css
@@ -109,7 +109,6 @@ html {
 .search-form .search-form-icons {
   color: #787c99;
   border-radius: 0 4px 4px 0;
-  background-color: #14141b;
 }
 
 .search-form .free_searches_tag {
